--- a/index.html
+++ b/index.html
@@ -10,14 +10,43 @@
 
     <!-- Bootstrap framework-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Lakay Se Lakay</title>
 </head>
 
 <body>
-    <!-- Start here -->
+    <nav class="navbar navbar-expand-md navbar-dark py-2">
+        <div class="container">
+            <a href="#home" class="navbar-brand">
+                <img src="img/mlogo.png" width="50" height="50" alt="">
+                <h3 class="d-inline align-middle">LAKAY-SE-LAKAY</h3>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link active"><strong>Home</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link"><strong>About</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#services" class="nav-link"><strong>Services</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contacts" class="nav-link"><strong>Contacts</strong></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
 
 
 
