Navbar Search Icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Bootstrap framework-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css">
@@ -17,6 +19,7 @@
 </head>
 
 <body>
+    <!-- Adding the NavBar -->
     <nav class="navbar navbar-expand-md navbar-dark py-2">
         <div class="container">
             <a href="#home" class="navbar-brand">
@@ -43,9 +46,15 @@
                         <a href="#contacts" class="nav-link"><strong>Contacts</strong></a>
                     </li>
                 </ul>
+                <a href="#">
+                    <i class="fas fa-search d-inline ml-2"></i>
+                </a>
             </div>
         </div>
     </nav>
+
+    <!-- Adding the top Carousel -->
+    
 
 
 
