--- a/index.html
+++ b/index.html
@@ -26,24 +26,23 @@
                 <img src="img/mlogo.png" width="50" height="50" alt="">
                 <h3 class="d-inline align-middle">LAKAY-SE-LAKAY</h3>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="#home" class="nav-link active"><strong>Home</strong></a>
+                    <li class="nav-item active">
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link"><strong>About</strong></a>
+                        <a href="#aboutus" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="nav-link"><strong>Services</strong></a>
+                        <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacts" class="nav-link"><strong>Contacts</strong></a>
+                        <a href="#contacts" class="nav-link">Contacts</a>
                     </li>
                 </ul>
                 <a href="#">
@@ -54,7 +53,22 @@
     </nav>
 
     <!-- Adding the top Carousel -->
-    
+    <section id="carSlider">
+        <div id="siteCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#siteCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#siteCarousel" data-slide-to="1"></li>
+                <li data-target="#siteCarousel" data-slide-to="2"></li>
+                <li data-target="#siteCarousel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active carousel-image-1"></div>
+                <div class="carousel-item carousel-image-2"></div>
+                <div class="carousel-item carousel-image-3"></div>
+                <div class="carousel-item carousel-image-4"></div>
+            </div>
+        </div>
+    </section>
 
 
 
