--- a/index.html
+++ b/index.html
@@ -70,7 +70,23 @@
         </div>
     </section>
 
-
+    <!-- Newsletter Section to Subscribe -->
+    <section class="bg-info text-white py-5" id="newsletter">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <input type="text" class="form-control mb-3" placeholder="Enter Name">
+                </div>
+                <div class="col-md-4">
+                    <input type="email" class="form-control mb-3" placeholder="Enter Email">
+                </div>
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-outline-light btn-block">
+                        <i class="far fa-envelope-open"></i>Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
