--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- fyardlest fontawesome kit-->
+    <!-- FYARDLEST FONTAWESOME KIT -->
     <script src="https://kit.fontawesome.com/0966361850.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap framework-->
+    <!-- BOOTSTRAP FRAMEWORK -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
+    <!-- ADDITIONAL CSS MUST BE PLACED AFTER BOOTSTRAP CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette|Tangerine|Lobster|Caveat|Dancing+Script|Open+Sans" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Courgette|Tangerine|Lobster|Caveat|Dancing+Script|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css">
     <title>Lakay Se Lakay</title>
 </head>
 
 <body>
-    <!-- Adding the NavBar -->
+    <!-- ADDING THE NAVBAR -->
     <nav class="navbar navbar-expand-md navbar-dark py-2 fixed-top">
         <div class="container">
             <a href="#home" class="navbar-brand">
-                <img src="img/mlogo.png" width="50" height="50" alt="">
+                <img src="img/mlogo.png" width="50" height="50" alt="" class="img-fluid">
                 <h3 class="d-inline align-middle">LAKAY-SE-LAKAY</h3>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
@@ -52,8 +53,8 @@
         </div>
     </nav>
 
-    <!-- Adding the top Carousel -->
-    <header id="carSlider">
+    <!-- ADDING THE TOP CAROUSEL -->
+    <header id="carouSlider">
         <div id="siteCarousel" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#siteCarousel" data-slide-to="0" class="active"></li>
@@ -70,10 +71,10 @@
         </div>
     </header>
 
-    <!-- Brands Slider -->
+    <!-- BRANDS SLIDER -->
 
 
-    <!-- Latest Post Section -->
+    <!-- LATEST POST SECTION -->
     <section id="latestPost">
         <div class="container">
             <div class="row">
@@ -89,7 +90,9 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">House</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
+                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -99,7 +102,9 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Appartment</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
+                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -109,7 +114,9 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Terrain</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
+                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -118,7 +125,7 @@
         </div>
     </section>
 
-    <!-- Newsletter Section to Subscribe -->
+    <!-- NEWSLETTER SECTION TO SUBSCRIBE -->
     <section class="bg-info text-white py-5" id="newsletter">
         <div class="container">
             <div class="row">
@@ -135,6 +142,59 @@
             </div>
         </div>
     </section>
+
+    <!-- FOOTER SECTION -->
+    <footer class="page-footer font-small bg-dark text-white pt-4">
+        <div class="container-fluid text-center text-md-left px-5">
+            <div class="row footer-row-1">
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <h5 class="text-uppercase">Footer text 1</h5>
+                    <p class="footerP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae harum esse fugiat. Itaque, culpa?</p>
+                </div>
+                <!-- Grid column -->
+                <hr class="clearfix w-100 d-md-none pb-3">
+                <!-- Grid column -->
+                <div class="col-md-4 mb-md-0 mb-3">
+                    <h5 class="text-uppercase">Footer text 2</h5>
+                    <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.</p>
+                </div>
+                <!-- Grid column -->
+                <hr class="clearfix w-100 d-md-none pb-3">
+                <!-- Grid column -->
+                <div class="col-md-4 mb-md-0 mb-3">
+                    <h5 class="text-uppercase">Footer text 3</h5>
+                    <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- Copyright -->
+                <div class="col-6 footer-copyright py-3">© 2020 Copyright -
+                    <a href="https://fyardlest.net/"> FYARDLEST.NET</a>
+                </div>
+                <div class="col footer-copyright py-3">
+                    <ul class="list-unstyled list-inline float-right">
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-fb mx-1">
+                                <i class="fab fa-facebook-f"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-tw mx-1">
+                                <i class="fab fa-twitter"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-gplus mx-1">
+                                <i class="fab fa-google-plus-g"> </i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Footer Text -->
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
