--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="row">
                 <!-- Copyright -->
                 <div class="col-6 footer-copyright py-3">© 2020 Copyright -
-                    <a href="https://fyardlest.net/"> FYARDLEST.NET</a>
+                    <a href="https://fyardlest.net/" class="text-warning"> FYARDLEST.NET</a>
                 </div>
                 <div class="col footer-copyright py-3">
                     <ul class="list-unstyled list-inline float-right">
