--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                         <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacts" class="nav-link">Contacts</a>
+                        <a href="contacts.html" class="nav-link">Contacts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#login" class="nav-link">Sign In</a>
                     </li>
                 </ul>
                 <a href="#">
@@ -90,9 +93,7 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">House</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
-                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -124,10 +125,15 @@
     </section>
 
     <!-- NEWSLETTER SECTION TO SUBSCRIBE -->
-    <section class="bg-info text-white py-5" id="newsletter">
+    <section class="bg-info text-white py-4" id="newsletter">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row pb-3">
+                <div class="col text-center">
+                    <h3>Subscribe To Our Newsletter</h3>
+                </div>
+            </div>
+            <div class="row">                
+                <div class="col-md-4">                    
                     <input type="text" class="form-control mb-resposive" placeholder="Enter Name">
                 </div>
                 <div class="col-md-4">
@@ -152,14 +158,14 @@
                 <!-- Grid column -->
                 <hr class="clearfix w-100 d-md-none pb-3">
                 <!-- Grid column -->
-                <div class="col-md-4 mb-md-0 mb-3">
+                <div class="col-md-5 mb-md-0 mb-3">
                     <h5 class="text-uppercase">Footer text 2</h5>
                     <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.</p>
                 </div>
                 <!-- Grid column -->
                 <hr class="clearfix w-100 d-md-none pb-3">
                 <!-- Grid column -->
-                <div class="col-md-4 mb-md-0 mb-3" id="contact1">
+                <div class="col-md-3 mb-md-0 mb-3" id="contact1">
                     <h5 class="text-uppercase text-center mt-2">Contact Us</h5>
                     <form action="">
                         <div class="form-group">
