--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">House</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
+                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -115,7 +117,9 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Terrain</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
+                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -132,8 +136,8 @@
                     <h3>Subscribe To Our Newsletter</h3>
                 </div>
             </div>
-            <div class="row">                
-                <div class="col-md-4">                    
+            <div class="row">
+                <div class="col-md-4">
                     <input type="text" class="form-control mb-resposive" placeholder="Enter Name">
                 </div>
                 <div class="col-md-4">
@@ -153,14 +157,18 @@
             <div class="row footer-row-1 pb-2">
                 <div class="col-md-4 mt-md-0 mt-3">
                     <h5 class="text-uppercase">Footer text 1</h5>
-                    <p class="footerP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae harum esse fugiat. Itaque, culpa?</p>
+                    <p class="footerP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint,
+                        nulla, nihil repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis,
+                        maxime quam recusandae harum esse fugiat. Itaque, culpa?</p>
                 </div>
                 <!-- Grid column -->
                 <hr class="clearfix w-100 d-md-none pb-3">
                 <!-- Grid column -->
                 <div class="col-md-5 mb-md-0 mb-3">
                     <h5 class="text-uppercase">Footer text 2</h5>
-                    <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.</p>
+                    <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga
+                        perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam
+                        omnis quos ipsam, aspernatur id excepturi hic.</p>
                 </div>
                 <!-- Grid column -->
                 <hr class="clearfix w-100 d-md-none pb-3">
@@ -176,38 +184,42 @@
                             <label for="email1">Email address</label>
                             <input type="email" class="form-control" id="email1" aria-describedby="emailHelp"
                                 placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</small>
+                            <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone
+                                else.</small>
                         </div>
                         <div class="form-group">
                             <label for="message1">Message</label>
-                            <textarea type="text" class="form-control" id="message1" placeholder="Message here" rows="4"></textarea>
+                            <textarea type="text" class="form-control" id="message1" placeholder="Message here"
+                                rows="4"></textarea>
                         </div>
                     </form>
                 </div>
             </div>
-            <div class="row footer-row-2">
-                <!-- Copyright -->
-                <div class="col-6 footer-copyright pt-2">© 2020 Copyright -
-                    <a href="https://fyardlest.net/" class="text-warning"> FYARDLEST.NET</a>
-                </div>
-                <div class="col footer-copyright py-3">
-                    <ul class="list-unstyled list-inline float-right">
-                        <li class="list-inline-item">
-                            <a class="btn-floating btn-fb mx-1">
-                                <i class="fab fa-facebook-f"> </i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="btn-floating btn-tw mx-1">
-                                <i class="fab fa-twitter"> </i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="btn-floating btn-gplus mx-1">
-                                <i class="fab fa-google-plus-g"> </i>
-                            </a>
-                        </li>
-                    </ul>
+            <div class="container">
+                <div class="row footer-row-2">
+                    <!-- Copyright -->
+                    <div class="col-6 footer-copyright pt-2">© 2020 Copyright -
+                        <a href="https://fyardlest.net/" class="text-warning"> FYARDLEST.NET</a>
+                    </div>
+                    <div class="col footer-copyright py-3">
+                        <ul class="list-unstyled list-inline float-right">
+                            <li class="list-inline-item">
+                                <a class="btn-floating btn-fb mx-1">
+                                    <i class="fab fa-facebook-f"> </i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="btn-floating btn-tw mx-1">
+                                    <i class="fab fa-twitter"> </i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="btn-floating btn-gplus mx-1">
+                                    <i class="fab fa-google-plus-g"> </i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
