--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
             <div class="container">
                 <div class="row footer-row-2">
                     <!-- Copyright -->
-                    <div class="col-6 footer-copyright pt-2">© 2020 Copyright -
+                    <div class="col-6 footer-copyright py-2">© 2020 Copyright -
                         <a href="https://fyardlest.net/" class="text-warning"> FYARDLEST.NET</a>
                     </div>
-                    <div class="col footer-copyright py-3">
+                    <div class="col footer-copyright pt-2">
                         <ul class="list-unstyled list-inline float-right">
                             <li class="list-inline-item">
                                 <a class="btn-floating btn-fb mx-1">
@@ -233,8 +233,7 @@
     <script src="scripts/scripts.js"></script>
 
     <script>
-        // Get the current year for the copyright
-        $('#year').text(new Date().getFullYear())
+        
     </script>
 </body>
 
