--- a/contacts.html
+++ b/contacts.html
@@ -48,10 +48,10 @@
                         <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="#contacts" class="nav-link">Contacts</a>
+                        <a href="#" class="nav-link">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#login" class="nav-link">Sign In</a>
+                        <a href="signin.html" class="nav-link">Sign In</a>
                     </li>
                 </ul>
                 <a href="#">
