--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="contacts.html" class="nav-link">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#login" class="nav-link">Sign In</a>
+                        <a href="signin.html" class="nav-link">Sign In</a>
                     </li>
                 </ul>
                 <a href="#">
@@ -93,9 +93,7 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">House</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
-                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -105,9 +103,7 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Appartment</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
-                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -117,9 +113,7 @@
                         <img src="img/mountains.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Terrain</h5>
-                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias
-                                officiis dolore quo placeat voluptas quam iste architecto illum.</p>
+                            <p class="card-text text-justify text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla suscipit excepturi delectus reiciendis, ipsam quia, alias officiis dolore quo placeat voluptas quam iste architecto illum.</p>
                             <a href="#" class="btn btn-info">Learn More</a>
                         </div>
                     </div>
@@ -157,18 +151,14 @@
             <div class="row footer-row-1 pb-2">
                 <div class="col-md-4 mt-md-0 mt-3">
                     <h5 class="text-uppercase">Footer text 1</h5>
-                    <p class="footerP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint,
-                        nulla, nihil repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis,
-                        maxime quam recusandae harum esse fugiat. Itaque, culpa?</p>
+                    <p class="footerP">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil repudiandae commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae harum esse fugiat. Itaque, culpa?</p>
                 </div>
                 <!-- Grid column -->
                 <hr class="clearfix w-100 d-md-none pb-3">
                 <!-- Grid column -->
                 <div class="col-md-5 mb-md-0 mb-3">
                     <h5 class="text-uppercase">Footer text 2</h5>
-                    <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga
-                        perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam
-                        omnis quos ipsam, aspernatur id excepturi hic.</p>
+                    <p class="footerP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.</p>
                 </div>
                 <!-- Grid column -->
                 <hr class="clearfix w-100 d-md-none pb-3">
@@ -184,13 +174,11 @@
                             <label for="email1">Email address</label>
                             <input type="email" class="form-control" id="email1" aria-describedby="emailHelp"
                                 placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone
-                                else.</small>
+                            <small id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
                             <label for="message1">Message</label>
-                            <textarea type="text" class="form-control" id="message1" placeholder="Message here"
-                                rows="4"></textarea>
+                            <textarea type="text" class="form-control" id="message1" placeholder="Message here" rows="4"></textarea>
                         </div>
                     </form>
                 </div>
