Services Page Added

--- a/contacts.html
+++ b/contacts.html
@@ -45,7 +45,7 @@
                         <a href="#aboutus" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="nav-link">Services</a>
+                        <a href="services.html" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item active">
                         <a href="#" class="nav-link">Contacts</a>
@@ -65,7 +65,8 @@
     <section id="contactSection">
         <div class="container">
             <div class="row">
-                <div class="col-8 py-3">
+                <!-- CONTACT FORM SECTION -->
+                <div class="col-lg-8 py-3">
                     <div class="text-center">
                     <h3 class="getInTouch">Get In Touch</h3>
                     <p class="contactUsSection mb-4">Please contact us if you need any further information</p>
@@ -87,7 +88,7 @@
                             <div class="col-sm-2">
                                 <label for="areaCode" class="col-form-label">Phone #</label>
                             </div>
-                            <div class="col-3">
+                            <div class="col-3 col-sm-4">
                                 <input type="tel" class="form-control" id="areaCode" placeholder="Area Code"
                                     value="+1">
                             </div>
@@ -130,7 +131,8 @@
                     </form>
                     </div>
                 </div>
-                <div class="col-lg-4 align-self-center py-4 text-center bg-light">                    
+                <!-- CAONTACT CARD -->
+                <div class="col-4 align-self-center py-4 text-center bg-light">                    
                     <div class="row">
                         <div class="col">
                             <h3 class="contactUsPart">Contact Us</h3>                            
