--- a/signin.html
+++ b/signin.html
@@ -45,7 +45,7 @@
                         <a href="#aboutus" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="nav-link">Services</a>
+                        <a href="services.html" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
                         <a href="contacts.html" class="nav-link">Contacts</a>
